--- a/terraform/DevOps-Challenge-main/jumia_phone_validator/validator-frontend/src/App.css
+++ b/terraform/DevOps-Challenge-main/jumia_phone_validator/validator-frontend/src/App.css
@@ -2,14 +2,14 @@
   text-align: left;
   max-width: 750px;
   margin: auto;
-***REMOVED***
+}
 
 .submit-form {
   max-width: 300px;
   margin: auto;
-***REMOVED***
+}
 
 .edit-form {
   max-width: 300px;
   margin: auto;
-***REMOVED***
+}
